k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testappfrontend-deployment
  namespace: testapp
  labels:
    app: testapp
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
      type: Recreate
  selector:
    matchLabels:
      app: testappfrontend
  template:
    metadata:
      labels:
        app: testappfrontend
    spec:
      containers:
        - name: testappfrontend
          image: ernom/testapp:v1.0.2
          ports:
            - containerPort: 80
