k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testappfronted-svc
  namespace: testapp
spec:
  type: NodePort
  selector:
    app: testapp
  ports:
    - port: 80
      name: http
